--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@ layout: home
 	</p>
 	
 <p style="text-align: justify;">
-	<ul>Design algorithms for natural language topic modelling in bilingual corpora</ul>
-	<ul>Approach statistically on cognition reflective psycholinguistic pragmatics</ul>
-	<ul>Collaborate with colleagues from UW Allen School of Computer Science</ul>
+	<ul>
+		<li>Design algorithms for natural language topic modelling in bilingual corpora</li>
+		<li>Approach statistically on cognition reflective psycholinguistic pragmatics</li>
+		<li>Collaborate with colleagues from UW Allen School of Computer Science</li>
+	</ul>
 </p>
 
 <!--DSC-->	
@@ -23,8 +25,13 @@ layout: home
 		08/2020 - Present
 	</p>
 	
-<p style="text-align: justify;"> Hosted virtual events with Google developers dedicated to forge a welcoming developer community learn and connect.
-	Check out our past and upcoming <a href="https://dsc.community.dev/university-of-washington/">events</a>.</p>
+<p style="text-align: justify;"> 
+	<ul>
+		<li>Organize virtual events with Google developers and Women Techmakers</li>
+		<li>Forge a welcoming developer community learn and connect</li>
+		<li>Check out our past and upcoming <a href="https://dsc.community.dev/university-of-washington/">events</a></li>
+	</ul> 
+</p>
 	
 <!--Algorithm Engineer Intern at Tsinghua Tongfang-->	
 	<h2>Algorithm Engineer Intern at Tsinghua Tongfang</h2>
@@ -32,22 +39,25 @@ layout: home
 		06/2019 - 09/2019
 	</p>
 	
-<p style="text-align: justify;"> Completed classification work over 9 categories of vehicle pictures, implemented ResNet-50 version with caffe and CNN 
-	with Tensorflow, familiar with utilizing the prototext files and cpp tools.Revised on Real-time Traffic Congestion Detection with SIGHTA Regression 
-	Network, which was presented during the 2019 IEEE 9th International Conference on Electronics Information and Emergency Communication(ICEIEC) </p>
+<p style="text-align: justify;"> 
+	<ul>
+		<li>Create automated system for differentiating labelled/unlabelled image data</li>
+		<li>Fine tune model with Tensorflow, Caffe and Residue-Network</li>
+		<li>Revise conference presentation and ensure precision in semantic translation</li>
+	</ul> 
+</p>
 
 <!--Mobile Development Club Vice President-->	
 	<h2>Mobile Development Club Vice President</h2>
 	<p align="center">
-		August 2019 - Present
+		09/2019 - Present
 	</p>
 	
 <p style="text-align: justify;">
-	Assisted club members in mobile development and brainstorming process. Held algorithm and machine learning workshops for Major League Hacking's local hack 
-	day hackathon event.Please check out our club website. 
-	<a href= "https://uwappdev.github.io/?=About">Mobile Development Club</a></p> 
-	
-	
+	Mentor club members in issue solving in language-specific contexts. 
+	Host technical workshops and record tutorials.
+	Check out our club website.<a href= "https://uwappdev.github.io/?=About">Mobile Development Club</a>
+</p> 
 	
 <p>For more details, see <a href="images/Xiang Curriculum Vitae.pdf" target="_blank">Xinyi's curriculum Vitae</a>(last updated on 04/15/21)</p>
 
@@ -81,6 +91,9 @@ layout: home
 	  <object data="https://lh3.googleusercontent.com/TVIl-n6Mvp_OQ3cDyCAON1HsHwTt3oWjNw7Al8shNNrFyTTKlUc7OtUPzomEU_DWKBnJ7dOjzu_rD43iV4icL2B75JNOItfOimwtHBk1j3UuVTcV3dRHTzcudMMBhXj2wCcZhN-UfQ=w1920-h1080"></object>
 	</div>-->
 
+<!--Presentations and Invited Speeches-->
+<h2>Presentations and Invited Speeches</h2>
+	
 <h2>Find Me on These Platforms</h2>
 <!--Icons from Remix Icon-->
 	<a href="https://www.linkedin.com/in/xinyi-xiang">
@@ -102,7 +115,7 @@ layout: home
 <h2>Awards</h2>
 	<ul>
 		<li>Stanford Biodesign Best App</li>
-		<li>2019 Dubhacks Finalist and Classic Tracks Top3</li>
+		<li>Dubhacks Classic Tracks Finalists</li>
 		<li>Microsoft Imagine Cup Regional Semi-Finalist</li>
 		<li>AP Scholar with Distinction</li>
 		<li>Washington and Lee University Alumni Book Award</li>
