--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ layout: home
 	Check out our club website.<a href= "https://uwappdev.github.io/?=About">Mobile Development Club</a>
 </p> 
 	
-<p>For more details, see <a href="images/Xiang Curriculum Vitae.pdf" target="_blank">Xinyi's curriculum Vitae</a>(last updated on 04/15/21)</p>
+<p>For more details, see <a href="images/Xiang Curriculum Vitae (1).pdf" target="_blank">Xinyi's Curriculum Vitae</a>(last updated on 04/15/21)</p>
 
 <!--Visitor Data Analysis-->	
 <div class="analytics"  style="border: solid lightgrey; border-radius: 5px;">
