--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: home
 		10/2020 - Present
 	</p>
 	
-<p style="text-align: justify;">
+<p style="text-align: left;">
 	<ul>
 		<li>Design algorithms for natural language topic modelling in bilingual corpora</li>
 		<li>Approach statistically on cognition reflective psycholinguistic pragmatics</li>
@@ -25,7 +25,7 @@ layout: home
 		08/2020 - Present
 	</p>
 	
-<p style="text-align: justify;"> 
+<p style="text-align: left;"> 
 	<ul>
 		<li>Organize virtual events with Google developers and Women Techmakers</li>
 		<li>Forge a welcoming developer community learn and connect</li>
@@ -39,7 +39,7 @@ layout: home
 		06/2019 - 09/2019
 	</p>
 	
-<p style="text-align: justify;"> 
+<p style="text-align: left;"> 
 	<ul>
 		<li>Create automated system for differentiating labelled/unlabelled image data</li>
 		<li>Fine tune model with Tensorflow, Caffe and Residue-Network</li>
@@ -53,7 +53,7 @@ layout: home
 		09/2019 - Present
 	</p>
 	
-<p style="text-align: justify;">
+<p style="text-align: left;">
 	Mentor club members in issue solving in language-specific contexts. 
 	Host technical workshops and record tutorials.
 	Check out our club website.<a href= "https://uwappdev.github.io/?=About">Mobile Development Club</a>
@@ -77,6 +77,7 @@ layout: home
 			<code>2019</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.facebook.com/1497687910461792/photos/a.2551166015113971/2551170878446818/?type=3&theater">DubHacks - Feel Better</a> &nbsp;<br>
 			<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://youtu.be/sq3jUGeo4Bs?t=1496">Stanford Biodesign - TrialX</a> &nbsp;
 			<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://github.com/Lucas-ZX-W/FacePoll">DubHacks - FacePoll</a> &nbsp;
+			<code>2021</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.wwdcscholars.com/s/D3D1FB52-EC4D-4F71-87D7-B55E8EA88EF3">Swift Student Challenge - Rubikat</a> &nbsp;
 		<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
 	<dd style="text-align: justify">{{ post.description | markdownify }}</dd>	
 </dl>
@@ -96,6 +97,20 @@ layout: home
 	<iframe id="ytplayer" type="text/html" width="640" height="360"
   src="https://www.youtube.com/embed/WM8msxE7kZY?autoplay=0&origin=https://www.youtube.com/watch?v=WM8msxE7kZY"
   frameborder="0"></iframe>
+
+	<iframe id="ytplayer" type="text/html" width="640" height="360"
+  src="https://www.youtube.com/watch?v=Lo2njiDd3yg&list=PLRvPTB8yPXMXPG8x36PMGuk5lG0sYBE3r"
+  frameborder="0"></iframe>
+	
+	<iframe id="ytplayer" type="text/html" width="640" height="360"
+  src="https://www.youtube.com/watch?v=7D2vPd771bk&list=PLRvPTB8yPXMUWL5fvNBr9UWzntVOQUnuf&index=2"
+  frameborder="0"></iframe>
+	
+	<iframe id="ytplayer" type="text/html" width="640" height="360"
+  src="https://www.youtube.com/watch?v=-GaKWMUCaaM&list=PLRvPTB8yPXMUWL5fvNBr9UWzntVOQUnuf&index=3"
+  frameborder="0"></iframe>
+	
+	
 	
 <h2>Find Me on These Platforms</h2>
 <!--Icons from Remix Icon-->
