--- a/index.html
+++ b/index.html
@@ -76,13 +76,15 @@ layout: home
 		<dt>    <code>2018</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.norfolkcollegiate.org/news/applied-computing-class-creates-app-to-make-schedules-a-breeze-">On the Calendar App</a> &nbsp;
 			<code>2019</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.facebook.com/1497687910461792/photos/a.2551166015113971/2551170878446818/?type=3&theater">DubHacks - Feel Better</a> &nbsp;<br>
 			<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://youtu.be/sq3jUGeo4Bs?t=1496">Stanford Biodesign - TrialX</a> &nbsp;
-			<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://github.com/Lucas-ZX-W/FacePoll">DubHacks - FacePoll</a> &nbsp;
+			<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://github.com/Lucas-ZX-W/FacePoll">DubHacks - FacePoll</a> &nbsp;<br>
 			<code>2021</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.wwdcscholars.com/s/D3D1FB52-EC4D-4F71-87D7-B55E8EA88EF3">Swift Student Challenge - Rubikat</a> &nbsp;
 		<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
 	<dd style="text-align: justify">{{ post.description | markdownify }}</dd>	
 </dl>
 	
-<!--Photos
+<!--
+NOTE:now archived 
+Photos
 <h2>Cheers to My Photographer Friends</h2>
 	<div class="pa-gallery-player-widget" style="width:80%; height:400px; display:none;"
 	  data-link="https://photos.app.goo.gl/1g7S1jStavHMET6PA"
@@ -90,7 +92,8 @@ layout: home
 	  <object data="https://lh3.googleusercontent.com/r-e1K7W5gITBZWw5krri1_ANow1DULOnJ4UIa2XIjVxUDVIQSN0u1YOzv80wki8EpixH5p9Zu-dQKO6oj_y5dW7XatDkG66hLM26uL3dhLgQhRNoMLc1jxw9rXN751R5nBZr_knXtA=w1920-h1080"></object>
 	  <object data="https://lh3.googleusercontent.com/iPP7ZOGk_PuiXY3Wb8JQ5NdV0KEnqCYl6idzZmckW9yI3CbTUzkVT7UBeudIS7GEpfKlChJqpxIPcTe0e5x7Q6lLqApeh0_nqFXZVbMRjvqmc1gA1KMCp9sFxNggYXa-3IVVnyzm9w=w1920-h1080"></object>
 	  <object data="https://lh3.googleusercontent.com/TVIl-n6Mvp_OQ3cDyCAON1HsHwTt3oWjNw7Al8shNNrFyTTKlUc7OtUPzomEU_DWKBnJ7dOjzu_rD43iV4icL2B75JNOItfOimwtHBk1j3UuVTcV3dRHTzcudMMBhXj2wCcZhN-UfQ=w1920-h1080"></object>
-	</div>-->
+	</div>
+-->
 
 <!--Presentations and Invited Speeches-->
 <h2>Presentations and Invited Speeches</h2>
@@ -99,7 +102,7 @@ layout: home
   frameborder="0"></iframe>
 
 	<iframe id="ytplayer" type="text/html" width="640" height="360"
-  src="https://www.youtube.com/watch?v=Lo2njiDd3yg&list=PLRvPTB8yPXMXPG8x36PMGuk5lG0sYBE3r"
+  src="https://www.youtube.com/watch?v=Lo2njiDd3yg&origin=PLRvPTB8yPXMXPG8x36PMGuk5lG0sYBE3r"
   frameborder="0"></iframe>
 	
 	<iframe id="ytplayer" type="text/html" width="640" height="360"
