--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@ Photos
   frameborder="0"></iframe>
 
 	<iframe id="ytplayer" type="text/html" width="640" height="360"
-  src="https://www.youtube.com/watch?v=Lo2njiDd3yg&origin=PLRvPTB8yPXMXPG8x36PMGuk5lG0sYBE3r"
+  src="https://www.youtube.com/embed/7D2vPd771bk?autoplay=0&origin=https://www.youtube.com/watch?v=7D2vPd771bk"
   frameborder="0"></iframe>
 	
 	<iframe id="ytplayer" type="text/html" width="640" height="360"
-  src="https://www.youtube.com/watch?v=7D2vPd771bk&list=PLRvPTB8yPXMUWL5fvNBr9UWzntVOQUnuf&index=2"
+  src="https://www.youtube.com/embed/-GaKWMUCaaM?autoplay=0&origin=https://www.youtube.com/watch?v=-GaKWMUCaaM"
   frameborder="0"></iframe>
 	
 	<iframe id="ytplayer" type="text/html" width="640" height="360"
-  src="https://www.youtube.com/watch?v=-GaKWMUCaaM&list=PLRvPTB8yPXMUWL5fvNBr9UWzntVOQUnuf&index=3"
+  src="https://www.youtube.com/embed/Lo2njiDd3yg?autoplay=0&origin=https://www.youtube.com/watch?v=Lo2njiDd3yg"
   frameborder="0"></iframe>
 	
 	
