--- a/secret/encrypt/post.html
+++ b/secret/encrypt/post.html
@@ -32,15 +32,15 @@
    </head>
    <body>
       <div class="topnav" id="topnav">
-         <a href="https://yk-liu.github.io"   class="active"   >Home</a>
-         <a href="https://yk-liu.github.io/blog" target="_blank"  >Posts</a>
-         <a href="https://yk-liu.github.io/blog/tags" target="_blank"  >Tags</a>
-         <a href="https://yk-liu.github.io/about"  >About</a>
-         <a href="https://github.com/yk-liu" target="_blank" style="text-decoration:none;float: right;">
+         <a href="https://xinyixiang.github.io/personalwebsitexinyi"   class="active"   >Home</a>
+         <a href="https://github.com/xinyixiang/xinyixiang.github.io/personalwebsitexinyi/blog" target="_blank"  >Posts</a>
+         <a href="https://xinyixiang.github.io/blog/tags" target="_blank"  >Tags</a>
+         <!--<a href="https://xinyixiang.github.io/about"  >About</a>-->
+         <a href="https://github.com/xinyixiang" target="_blank" style="text-decoration:none;float: right;">
          <i class="fab fa-github fa-lg" ></i>
          </a>
       </div>
-      <!-- this is Back to Top Button -->
+      <!-- Back to Top Button -->
       <button onclick="topFunction()" id="BackToTop" title="Go to top" style="display: block;"><i class="fas fa-angle-double-up"></i> Top</button>
       <!-- link to backtotopbtn.css -->
       <link rel="stylesheet" href="/assets/css/backtotopbtn.css">
@@ -56,7 +56,7 @@
    </body>
    <footer class="footer">
       <p style="margin-left: auto; margin-right: auto;"> 
-         &copy; 2018, Yingkai Liu. <a href="https://github.com/yk-liu/yk-liu.github.io/blob/master/LICENSE.md" target="_blank">License</a>. <a href="/info/disclaimer" target="_blank">Disclaimer</a>. 
+         &copy; 2021, Xinyi Xiang. <a href="https://github.com/yk-liu/yk-liu.github.io/blob/master/LICENSE.md" target="_blank">License</a>. <a href="/info/disclaimer" target="_blank">Disclaimer</a>. 
       </p>
    </footer>
    <link rel="stylesheet" href="/assets/css/footer.css">
