--- a/meta/sample-post.html
+++ b/meta/sample-post.html
@@ -1,61 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-   <head>
-      {% include head.html %} 
-      {% if page.mathjax %}			
-      {% include markdown-enhancements/mathjax.html %}
-      {% endif %}
-      {% include theme-vue.html%}
-      <!-- change font -->
-      <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,400i,700|Source+Sans+Pro|Ubuntu+Mono" rel="stylesheet">
-      {% if page.numbering == true %}
-      <!-- link to counter.css -->
-      <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/assets/css/counter.css">
-      {% endif %}
-      {% if page.commentable == true %}
-      <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/assets/css/commentit.css">
-      {% endif %}
-      <!-- link to responsive post.css -->
-      <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/assets/css/post.css">
-   </head>
-   <body>
-      <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
-      <!-- this is side bar -->
-      <div class="sidebar" id="sidebar">
-         <nav class="sidebar-nav">
-            {% include navitem.html %}
-         </nav>
-         {% if page.toc %}
-         <div class="toc">
-            <div class='toc-container'>
-               {% include toc.html html=content %}
-            </div>
-         </div>
-         {% endif %}
-      </div>
-      <!-- Add all page content inside this div if you want the side nav to push page content to the right
-         (not used if you only want the sidenav to sit on top of the page -->
-      <div class="wrap">
-         <div class="container content">
-            <div class="page">
-               {% include frontmatter.html %}
-               <div id="content-container" style="text-align:justify">
-                  {{ content }}			
-               </div>
-               <div id="comment-session">
-                  {% include commentit.html %}
-               </div>
-            </div>
-         </div>
-      </div>
-      <label for="sidebar-checkbox" class="sidebar-toggle"></label>
-      {% include footer.html %} 
-   </body>
-   {% if page.mermaid == true %}
-   {% include markdown-enhancements/mermaid.html %}
-   {% endif %}
-   {% if page.highlight == true %}
-   {% include markdown-enhancements/highlight.html %}
-   {% endif %}
-</html>
+---
+layout: post
+---
 
+<!--Experience Highlighting-->
+<div class="user-details">
+    <h2> Experience Highlight </h2>
+    <!--UW Undergrad RA-->		
+        <h2>UW Undergrad Research Assistant</h2>
+        <p align="center">
+            10/2020 - Present
+        </p>
+        
+    <p style="text-align: left;">
+        <ul>
+            <li>Design algorithms for natural language topic modelling in bilingual corpora</li>
+            <li>Approach statistically on cognition reflective psycholinguistic pragmatics</li>
+            <li>Collaborate with colleagues from UW Allen School of Computer Science</li>
+        </ul>
+    </p>
