--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ layout: home
 	<dl>
 		{% for post in site.posts limit:3 %}
 		<dt>
-			<code>{{ post.date | date_to_string }}</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="{{post.url}}">{{ post.title }}</a>&nbsp;{% include status-indicator.html status=post.status%}
+			<code>{{ post.date | date_to_string }}</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="{{post.category}}/{{post.title}}">{{ post.title }}</a>&nbsp;{% include status-indicator.html status=post.status%}
 		</dt>
 		{% if post.description %}
 		<dd style="text-align: justify">{{ post.description | markdownify }}</dd>
