--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ layout: home
 <p style="text-align: left;">
 	Mentor club members in issue solving in language-specific contexts. 
 	Host technical workshops and record tutorials.
-	Check out our club website.<a href= "https://uwappdev.github.io/?=About">App Development Club</a>
+	Check out our club website.<a href= "https://uwdev.app/">App Development Club</a>
 </p> 
 	
 <p>For more details, see <a href="images/Xiang_Curriculum_Vitae.pdf" target="_blank">Xinyi's Curriculum Vitae</a>(last updated on 08/09/21)</p>
