--- a/index.html
+++ b/index.html
@@ -5,6 +5,34 @@ layout: home
 <!--Experience Highlighting-->
 <div class="user-details">
 <h1> Experience Highlight </h1>
+
+<!--Dataminr-->
+<h3>Dataminr Software Engineer Intern</h3>
+	<p align="center">
+		06/2022 - 09/2022
+	</p>
+	
+<p style="text-align: left;">
+	<ul>
+		<li>Led a major re architecture of the pipeline system to optimize dataset, communicate data-driven insights, and provide advanced solutions in procedures with snowflake</li>
+		<li>Integrated the partition, transformation of Amazon S3 data with structure-oriented approaches</li>
+		<li>Designed SQL schema that presents assembled, high-throughput JSON data with low latency</li>
+	</ul>
+</p>
+
+<!--BCH-HMS-->
+<h3>Bioinformatics Analyst at Boston Children's Hospital</h3>
+	<p align="center">
+		06/2022 - 09/2022
+	</p>
+	
+<p style="text-align: left;">
+	<ul>
+		<li>Augmented children’s rare disease database integration with RedCap API, Amazon E2 to support coherent user-defined PHI retrieval compliant with protocols</li>
+		<li>Designed and developed a real-time analytics dashboard with admin-level visualization with R, ggplot, fastR2, tidyverse used by PIs and medical professionals across the department</li>
+	</ul>
+</p>
+
 <!--UW Undergrad RA-->		
 	<h3>UW Undergrad Research Assistant</h3>
 	<p align="center">
@@ -22,14 +50,14 @@ layout: home
 <!--DSC-->	
 	<h3>Google Developer Student Clubs Lead</h3>
 	<p align="center">
-		08/2020 - Present
+		08/2020 - 09/2021
 	</p>
 	
 <p style="text-align: left;"> 
 	<ul>
 		<li>Organize virtual events with Google developers and Women Techmakers</li>
 		<li>Forge a welcoming developer community learn and connect</li>
-		<li>Check out our past and upcoming <a href="https://dsc.community.dev/university-of-washington/">events</a></li>
+		<li>See our past and upcoming <a href="https://dsc.community.dev/university-of-washington/">events</a></li>
 	</ul> 
 </p>
 	
@@ -43,20 +71,22 @@ layout: home
 	<ul>
 		<li>Create automated system for differentiating labelled/unlabelled image data</li>
 		<li>Fine tune model with Tensorflow, Caffe and Residue-Network</li>
-		<li>Revise conference presentation and ensure precision in semantic translation</li>
+		<li>Revise conference paper to secure translational grammar precision</li>
 	</ul> 
 </p>
 
-<!--App Development Club Vice President-->	
-	<h3>App Development Club Vice President</h3>
+<!--Mobile App Development Club Board Member-->	
+	<h3>App Development Club Board Member</h3>
 	<p align="center">
 		09/2019 - Present
 	</p>
 	
 <p style="text-align: left;">
-	Mentor club members in issue solving in language-specific contexts. 
-	Host technical workshops and record tutorials.
-	Check out our club website.<a href= "https://uwdev.app/">App Development Club</a>
+	<ul>
+		<li>Mentor club members in issue solving in language-specific contexts.</li>
+		<li>Host technical workshops and record tutorials at intercollegiate competitions.</li>
+		<li>Visit our club website at <a href= "https://uwdev.app/">Mobile App Development Club</a></li>
+	</ul> 
 </p> 
 	
 <p>For more details, see <a href="images/Xiang_Curriculum_Vitae.pdf" target="_blank">Xinyi's Curriculum Vitae</a>(last updated on 08/09/21)</p>
@@ -79,6 +109,8 @@ layout: home
 			<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://youtu.be/sq3jUGeo4Bs?t=1496">Stanford Biodesign - TrialX</a> &nbsp;
 			<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://github.com/Lucas-ZX-W/FacePoll">DubHacks - FacePoll</a> &nbsp;<br>
 			<code>2021</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.wwdcscholars.com/s/D3D1FB52-EC4D-4F71-87D7-B55E8EA88EF3">Swift Student Challenge - Rubikat</a> &nbsp;
+			<code>2022</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://spa-drp.github.io/past-projects.html">UW Stats Direct Reading Program - Winter 2021 Intro to Nonparametric Stats<a> &nbsp;
+
 		<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>	
 </dl>
 
@@ -144,6 +176,7 @@ Photos
 <!--Awards
 <h2>Awards</h2>
 	<ul>
+  		<li>National Oceanic and Atmospheric Administration Research Fellowship</li>
 		<li>Stanford Biodesign Best App</li>
 		<li>Dubhacks Classic Tracks Finalists</li>
 		<li>Microsoft Imagine Cup Regional Semi-Finalist</li>
