--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ layout: home
 			<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://youtu.be/sq3jUGeo4Bs?t=1496">Stanford Biodesign - TrialX</a> &nbsp;
 			<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://github.com/Lucas-ZX-W/FacePoll">DubHacks - FacePoll</a> &nbsp;<br>
 			<code>2021</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.wwdcscholars.com/s/D3D1FB52-EC4D-4F71-87D7-B55E8EA88EF3">Swift Student Challenge - Rubikat</a> &nbsp;
-			<code>2022</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://spa-drp.github.io/past-projects.html">UW Stats Direct Reading Program - Winter 2021 Intro to Nonparametric Stats<a> &nbsp;
+			<code>2022</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://spa-drp.github.io/past-projects.html">UW Stats Direct Reading Program - Winter 2021 Intro to Nonparametric Stats</a> &nbsp;
 
 		<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>	
 </dl>
