--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ layout: home
 	
 <p style="text-align: left;"> 
 	<ul>
-		<li>Organize virtual events with Google developers and Women Techmakers</li>
-		<li>Forge a welcoming developer community learn and connect</li>
-		<li>See our past and upcoming <a href="https://dsc.community.dev/university-of-washington/">events</a></li>
+		Organize virtual events with Google developers and Women Techmakers.
+		Forge a welcoming developer community learn and connect.
+		See our past and upcoming <a href="https://dsc.community.dev/university-of-washington/">events</a>
 	</ul> 
 </p>
 	
