--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ layout: home
 	</ul>
 </p>
 
+<!--
+NOTE:now archived 
 <!--UW Undergrad RA-->		
 	<h3>UW Undergrad Research Assistant</h3>
 	<p align="center">
@@ -46,6 +48,7 @@ layout: home
 		<li>Collaborate with colleagues from UW Allen School of Computer Science</li>
 	</ul>
 </p>
+-->
 
 <!--DSC-->	
 	<h3>Google Developer Student Clubs Lead</h3>
@@ -75,6 +78,8 @@ layout: home
 	</ul> 
 </p>
 
+<!--
+NOTE:now archived 
 <!--Mobile App Development Club Board Member-->	
 	<h3>App Development Club Board Member</h3>
 	<p align="center">
@@ -88,7 +93,8 @@ layout: home
 		<li>Visit our club website at <a href= "https://uwdev.app/">Mobile App Development Club</a></li>
 	</ul> 
 </p> 
-	
+-->
+
 <p>For more details, see <a href="images/Xiang_Curriculum_Vitae.pdf" target="_blank">Xinyi's Curriculum Vitae</a>(last updated on 08/09/21)</p>
 
 <!--Visitor Data Analysis-->	
