--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@ layout: home
 		<li>Designed and developed a real-time analytics dashboard with admin-level visualization with R, ggplot, fastR2, tidyverse used by PIs and medical professionals across the department</li>
 	</ul>
 </p>
-
-<!--
-NOTE:now archived 
+ 
 <!--UW Undergrad RA-->		
 	<h3>UW Undergrad Research Assistant</h3>
 	<p align="center">
@@ -48,7 +46,6 @@ NOTE:now archived
 		<li>Collaborate with colleagues from UW Allen School of Computer Science</li>
 	</ul>
 </p>
--->
 
 <!--DSC-->	
 	<h3>Google Developer Student Clubs Lead</h3>
@@ -114,7 +111,7 @@ NOTE:now archived
 			<code>2019</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.facebook.com/1497687910461792/photos/a.2551166015113971/2551170878446818/?type=3&theater">DubHacks - Feel Better</a> &nbsp;<br>
 			<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://youtu.be/sq3jUGeo4Bs?t=1496">Stanford Biodesign - TrialX</a> &nbsp;
 			<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://github.com/Lucas-ZX-W/FacePoll">DubHacks - FacePoll</a> &nbsp;<br>
-			<code>2021</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.wwdcscholars.com/s/D3D1FB52-EC4D-4F71-87D7-B55E8EA88EF3">Swift Student Challenge - Rubikat</a> &nbsp;
+			<code>2021</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.wwdcscholars.com/s/D3D1FB52-EC4D-4F71-87D7-B55E8EA88EF3">Swift Student Challenge - Rubikat</a> &nbsp;<br>
 			<code>2022</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://spa-drp.github.io/past-projects.html">UW Stats Direct Reading Program - Winter 2021 Intro to Nonparametric Stats</a> &nbsp;
 
 		<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>	
