--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@ layout: home
 	</ul> 
 </p>
 
-<!--
-NOTE:now archived 
+ 
 <!--Mobile App Development Club Board Member-->	
 	<h3>App Development Club Board Member</h3>
 	<p align="center">
@@ -90,7 +89,6 @@ NOTE:now archived
 		<li>Visit our club website at <a href= "https://uwdev.app/">Mobile App Development Club</a></li>
 	</ul> 
 </p> 
--->
 
 <p>For more details, see <a href="images/Xiang_Curriculum_Vitae.pdf" target="_blank">Xinyi's Curriculum Vitae</a>(last updated on 08/09/21)</p>
 
@@ -112,7 +110,7 @@ NOTE:now archived
 			<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://youtu.be/sq3jUGeo4Bs?t=1496">Stanford Biodesign - TrialX</a> &nbsp;
 			<code>2020</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://github.com/Lucas-ZX-W/FacePoll">DubHacks - FacePoll</a> &nbsp;<br>
 			<code>2021</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://www.wwdcscholars.com/s/D3D1FB52-EC4D-4F71-87D7-B55E8EA88EF3">Swift Student Challenge - Rubikat</a> &nbsp;<br>
-			<code>2022</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://spa-drp.github.io/past-projects.html">UW Stats Direct Reading Program - Winter 2021 Intro to Nonparametric Stats</a> &nbsp;
+			<code>2022</code><i class="fas fa-angle-double-right" aria-hidden="true"></i><a href="https://spa-drp.github.io/past-projects.html">UW Stats Direct Reading Program - Intro to Nonparametric Stats</a> &nbsp;
 
 		<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>	
 </dl>
@@ -176,8 +174,7 @@ Photos
 <body></body>
 		
 	
-<!--Awards
-<h2>Awards</h2>
+<h2>Fellowship and Awards</h2>
 	<ul>
   		<li>National Oceanic and Atmospheric Administration Research Fellowship</li>
 		<li>Stanford Biodesign Best App</li>
@@ -186,4 +183,4 @@ Photos
 		<li>AP Scholar with Distinction</li>
 		<li>Washington and Lee University Alumni Book Award</li>
 	</ul>
-</div >-->	
+</div >	
